Add a slider and a button to confirm new grid values

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="sketch-area" class="container"></div>
+    <div class="big-container">
+      <div id="title">Etch-A-Sketch</div>
+      <div class="slider-button-container">
+        <div id="slider">
+          <input
+            type="range"
+            min="1"
+            max="100"
+            value="16"
+            class="slider"
+            id="myRange"
+          />
+        </div>
+        <div id="range-display">16 x 16</div>
+        <button id="apply-button">Apply</button>
+      </div>
+      <div id="sketch-area" class="container"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
